- Added feature that enable the client to requery a previosly done search by trackingId
